# notifier-demo

./: .gitignore  .gitpod.yml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
app/: config.py  deps.py  handler.py  main.py
app/routers/: index.py  slack.py
app/schemas/: response.py  slack.py
app/services/: slack.py
